# Projeto_AEDA_1_HouseMaster

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  classDiagram.puml
AEDA2021_Turma06_G03/: apresentacao.pptx
AEDA2021_Turma06_G03/codigo/: CMakeLists.txt  Date.cpp  Individual.h  Interface.h  Menu.cpp  Services_Constants.h  main.cpp
data/: clients.txt  collabs.txt  history.txt  services.txt  types_of_services.txt
docs/: classDiagram.puml
doxygen/html/: _date_8h_source.html  _house_master_8h_source.html  _house_master_affiliate_8h_source.html  _housemaster_interface_8h_source.html  _individual_8h_source.html  _interface_8h_source.html  _menu_8h_source.html  _services_8h_source.html  _services___constants_8h_source.html  annotated.html  bst_8h_source.html  class_admin-members.html  class_admin.html  class_availability-members.html  class_availability.html  class_b_s_t-members.html  class_b_s_t.html  class_b_s_t_itr_in-members.html  (+111 more)
src/: CMakeLists.txt  Client.cpp  Client.h  Collaborator.cpp  Collaborator.h  Date.cpp  Date.h  HouseMaster.cpp  HouseMaster.h  HouseMasterAffiliate.cpp  HouseMasterAffiliate.h  HousemasterInterface.cpp  HousemasterInterface.h  Individual.cpp  Individual.h  Individuals.cpp  Individuals.h  Interface.cpp  Interface.h  Menu.cpp  Menu.h  Services.cpp  Services.h  Services_Constants.h  date.cpp  date.h  individuals.cpp  individuals.h  main.cpp  services.h
src/data/: affiliates.txt  clients.txt  collabs.txt  history.txt  responsibles.txt  services.txt  usernames.txt
tests/: CMakeLists.txt  date_test.cpp  houseMaster_test.cpp
(+249 files in other folders)
